# cmake_template

./: CMakeLists.txt  main.c
mydir1/: test.c  test1.h
mydir2/: test.cpp  test2.h
